# smart-sweeper-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  server.py  test_features.py  verify_all.py
agent/: middleware.py  multi_agent.py  react_agent.py  smart_agent.py
agent/tools/: agent_tools.py
mcp_servers/: amap_server.py
model/: factory.py
prompts/: main_prompt.txt  rag_summarize.txt  report_prompt.txt
rag/: hybrid_retriever.py  query_rewriter.py  rag_service.py  reranker.py  vector_store.py
skills/: accessory_recommend.md  purchase_guide.md  report_generation.md  troubleshooting.md
tests/: benchmark_chunk.py  conftest.py  eval_dataset.yml  eval_metrics.py  run_eval.py  test_amap_client.py  test_config_handler.py  test_file_handler.py  test_path_tool.py  test_rag_integration.py  test_rag_quality.py
utils/: amap_client.py  config_handler.py  conversation_store.py  file_handler.py  guardrails.py  logger_handler.py  prompt_loader.py  skill_loader.py  tracing.py
