[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-sweeper-agent"
version = "0.1.0"
description = "智扫通机器人智能客服 — RAG + Agent 对话系统"
requires-python = ">=3.11"
dependencies = [
    "langchain-chroma>=0.1",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.2",
    "dashscope>=1.20",
    "pyyaml>=6.0",
    "streamlit>=1.35",
    "requests>=2.28",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "rank-bm25>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
mcp = ["langchain-mcp>=0.1", "mcp>=1.0"]

[tool.setuptools]
packages = ["utils", "model", "rag", "agent", "agent.tools"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short -m \"not integration\""
markers = [
    "integration: 集成测试，需要外部服务",
]

[tool.coverage.run]
source = ["utils", "rag", "agent", "model"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 40
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
